# 5_axis_platform

./: .gitmodules  CMakeLists.txt  package.xml  platformio.ini  readme.txt
copy_in_platform_io/lib/MODSERIAL_ID2542/: .hg_archival.txt
copy_in_platform_io/lib/rosserial_mbed_ID977/: .library.json  README.md  library.json
foot_platform_ros/: CMakeLists.txt  package.xml
foot_platform_ros/config/: haptic_control_settings.yaml  mixed_platform_settings.yaml  platform_geom_data.yaml  right_pid_forceSensor_noleg.yaml  rokubimini_sensor.yaml
foot_platform_ros/config/left/: pid_forceSensor.yaml  pid_pos.yaml  pid_virtual_wall.yaml  rcm_ctrl.yaml
foot_platform_ros/config/right/: compensation.yaml  pid_forceSensor.yaml  pid_speed.yaml  pid_virtual_wall.yaml
foot_platform_ros/include/: footForceMeasModifier.h  footForceMeasModifier.h.org  footHapticController.h  footPlatformVirtual.h  footStatePublisher.h  mixedPlatformStatePublisher.h
foot_platform_ros/launch/: force_sensor.launch  force_sensor_modifier.launch  force_sensor_modifier.launch.org  force_sensors copy.launch  force_sensors.launch  force_sensors.launch.org  force_sensors_rokubimini.launch  haptic_controller.launch  hw_params_upload.launch  mixed_platform.launch  params_upload.launch  platform_all.launch  platform_hw.launch  platform_ros.launch  platform_rviz.launch  platform_statepub.launch  two_platforms_ros.launch
foot_platform_ros/models/: foot_platform.sdf
foot_platform_ros/models/meshes/stl/: base_collision.stl  pedal_collision.stl  roll_collision.stl  x_collision.stl  y_collision.stl  yaw_collision.stl
foot_platform_ros/rviz/: platform_alone.rviz
foot_platform_ros/rviz/both/: platform_alone.rviz
foot_platform_ros/rviz/left/: platform_alone.rviz
foot_platform_ros/rviz/right/: platform_alone.rviz
foot_platform_ros/scripts/: farshad_kin_validatio_2020-09-30-15-30-39.bag  frames.gv  fs_launch_platform_simple.sh
foot_platform_ros/src/: footForceMeasModifier.cpp  footForceMeasModifier.cpp.org  footForceMeasModifier_node.cpp  footForceMeasModifier_node.cpp.org  footHapticController.cpp  footHapticController_node.cpp  footPlatformVirtual.cpp  footPlatformVirtual_node.cpp  footStatePublisher.cpp  footStatePublisher_node.cpp  mixedPlatformStatePublisher.cpp  mixedPlatformStatePublisher.cpp.org  mixedPlatformStatePublisher_node.cpp
foot_platform_ros/urdf/: foot_platform.create.xacro  foot_platform.joints.xacro  foot_platform.links.xacro  foot_platform.urdf.xacro
foot_platform_ros/urdf/left/: foot_platform.create.xacro  foot_platform.joints.xacro  foot_platform.links.xacro  foot_platform.urdf.xacro
foot_platform_ros/urdf/right/: foot_platform.create.xacro  foot_platform.joints.xacro  foot_platform.links.xacro  foot_platform.urdf.xacro
lib/Arduino-PID-Library/src/: PID_v1.cpp  PID_v1.h
lib/LP_Filter/src/: LP_Filter.cpp  LP_Filter.h
lib/MODSERIAL_ID2542/: MODSERIAL.h
lib/MODSERIAL_ID2542/Device/: MODSERIAL_NUCLEO_F103RB.h
lib/PID_v1/src/: PID_v1.cpp  PID_v1.h
lib/Platform/src/: Platform_ros.cpp
lib/QEC_1x/src/: QEC_1X_SPI.cpp  QEC_1X_SPI.h
lib/circular_buffer/src/: circular_buffer.cpp  circular_buffer.h
lib/custom_msgs/custom_msgs/: CMakeLists.txt  package.xml
lib/custom_msgs/custom_msgs/cfg/: frictionID.cfg
lib/custom_msgs/custom_msgs/msg/: FootInputMsg_v2.msg  FootOutputMsg_v2.msg
lib/custom_msgs/custom_msgs/ros_lib/custom_msgs/: FeetOutputMsg_v2.h  FootInputMsg_v2.h
lib/custom_msgs/custom_msgs/src/: feet_output_publisher.cpp
lib/custom_msgs/custom_msgs/srv/: setControllerSrv.srv
lib/custom_msgs/src/: FootInputMsg_v2.h  FootOutputMsg_v2.h  frictionIDConfig.h  setControllerSrv.h
lib/custom_msgs/src.org/: setControllerSrv.h  setStateSrv.h
lib/encoder/src/: QEC_1X_SPI.cpp  QEC_1X_SPI.h
lib/lp_filter/src/: LP_Filter.cpp  LP_Filter.h
lib/matrix_lpFilter/src/: MatLP_Filter.cpp  MatLP_Filter.h
lib/pid/src/: PIDMat.cpp  PIDMat.h  PID_v1.cpp  PID_v1.h
lib/pid_interpolator/src/: pid_interpolator.cpp  pid_interpolator.h
lib/platform/src/: Platform.cpp  Platform.h  Platform_clear.cpp  Platform_compensation.cpp  Platform_constrains.cpp  (+31 more)
lib/ros_lib/: MbedHardware.h  STM32Hardware.h
settings_5_axis_platform/: CMakeLists.txt  package.xml
settings_5_axis_platform/config/: right_compensation.yaml  right_pid_forceSensor.yaml  right_pid_virtual_wall.yaml
settings_5_axis_platform/launch/: params_upload.launch  platform_right.launch
sh/: 99-usb-input.rules  setup.sh
src/: main.cpp  mainpp.cpp
(+24 files in other folders)
