<?xml version="1.0"?>
<package>
  <name>5_axis_platform</name>
  <version>1.0.0</version>
  <description>Platform_Firmware_DO_NOT_CMAKE</description>
  <maintainer email="jacob.hernandezsanchez@epfl.ch">jacob</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>

